my navbar was having this problem and I tried and fix it now it is well aligned

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -241,4 +241,7 @@ body.font-monospace {
   .nav-mobile-toggle {
     display: none !important;
   }
+  .nav-mobile-menu {
+    display: none !important;
+  }
 }
